fix: reduce .close buttom hitbox to avoid overlapping with the academic tab.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3598,7 +3598,6 @@ button:disabled,
   border-top: solid 1px rgba(0, 0, 0, 0.125);
   margin: 0.5em 0 0 0;
   padding: 0.5em 0 0 0;
-  width: 100%;
 }
 
 #menu ul > li:first-child {
@@ -3609,7 +3608,6 @@ button:disabled,
 
 #menu ul > li > a {
   border: 0;
-  width: 100%;
   color: inherit;
   display: block;
   font-size: 0.8em;
@@ -3637,7 +3635,8 @@ button:disabled,
   right: 0;
   top: 0;
   vertical-align: middle;
-  width: 7em;
+  width: 2em;
+  height: 2em;
 }
 
 @media screen and (max-width: 736px) {
